# CLI-Task-Tracker

./: .gitignore  README.MD  pyproject.toml
src/: commands.py  config.py  main.py  utils.py
src/data/: data.json
task_cli/: __main__.py  commands.py  utils.py
