[tool.poetry]
name = "task-cli"
version = "0.1.0"
description = "CLI для управления задачами"
authors = ["Ваше Имя <ваш.email@example.com>"]
readme = "README.md"
license = "MIT"

[tool.poetry.scripts]
task-cli = "task_cli.__main__:main"

[tool.poetry.dependencies]
python = "^3.8"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"